# vaultctl

./: .gitignore  LICENSE  README.ko.md  README.md  build-deb.sh  index.html  install.sh  pyproject.toml  vaultctl.spec
.github/: renovate.json
.github/workflows/: release.yml
dists/stable/: Release
dists/stable/main/binary-amd64/: Packages
packaging/etc/: config.example
packaging/scripts/: postinst  postrm  preinst  prerm
packaging/systemd/: vaultctl-renew.service  vaultctl-renew.timer
scripts/: install-remote.sh  install.sh  setup-apt-repo.sh  setup-apt-server-traefik.sh  setup-apt-server.sh
src/vaultctl/: __init__.py  __main__.py  cli.py  config.py  onepassword.py  templates.py  utils.py  vault_client.py
src/vaultctl/commands/: __init__.py  admin.py  auth.py  compose.py  docker.py  extended.py  lxc.py  repo.py  selfupdate.py  setup.py  token.py
src/vaultctl/commands/admin/: __init__.py  apt_setup.py  credentials.py  repo.py  secrets.py  setup.py  token.py
src/vaultctl/commands/user/: __init__.py  compose.py  extended.py
src/vaultctl/templates/: config.j2
src/vaultctl/templates/apt/: Caddyfile.j2  apt-config.j2  distributions.j2  fancyindex-footer.html.j2  fancyindex-header.html.j2  gpg-batch.j2  index.html.j2  nginx.conf.j2  options.j2  setup-client.sh.j2
src/vaultctl/templates/compose/: __init__.py  ctl.sh.j2
systemd/: env.example  vaultctl-renew.service  vaultctl-renew.timer
templates/: index.html
templates/fancyindex/: footer.html  header.html
