[tool.poetry]
name = "vaultctl"
version = "0.0.0-dev"
description = "HashiCorp Vault CLI wrapper"
authors = ["Aether <aether@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "vaultctl", from = "src"}]
include = ["src/vaultctl/templates/**/*.j2"]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
typer = {extras = ["all"], version = "^0.25.1"}
rich = "^15.0.0"
httpx = "^0.28.1"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
python-dotenv = "^1.2.2"
keyring = "^25.7.0"
jinja2 = "^3.1.6"
ruamel-yaml = "^0.19.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
black = "^26.3.1"
ruff = "^0.15.12"
mypy = "^2.0.0"
pyinstaller = "^6.20.0"

[tool.poetry.scripts]
vaultctl = "vaultctl.cli:app"
vc = "vaultctl.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130
target-version = ['py310']

[tool.ruff]
line-length = 130
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
